changed the cmake variables to be CMAKE_CURRENT_* mostly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,12 @@ option(BUILD_EXAMPLES "Build the example programs" ON)
 if (WIN32)
     message(STATUS "Starting build for Windows system...")
 
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_BINARY_DIR}/bin)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_BINARY_DIR}/lib)
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_BINARY_DIR}/lib)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}/bin)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_CURRENT_BINARY_DIR}/bin)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}/lib)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_CURRENT_BINARY_DIR}/lib)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}/lib)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_CURRENT_BINARY_DIR}/lib)
 
     # Path to main directory of GLEW and SDL2
     set(GLEW_DIR C:/GLEW)
@@ -22,16 +22,16 @@ if (WIN32)
     set(GLEW_DLL ${GLEW_DIR}/bin/Release/x64/glew32.dll)
     set(SDL_DLL ${SDL_DIR}/lib/x64/SDL2.dll)
 
-    file(COPY ${GLEW_DLL} DESTINATION ${CMAKE_BINARY_DIR}/bin)
-    file(COPY ${SDL_DLL}  DESTINATION ${CMAKE_BINARY_DIR}/bin)
+    file(COPY ${GLEW_DLL} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin)
+    file(COPY ${SDL_DLL}  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin)
 
     set(INCLUDE_DIRS
         ${GLEW_DIR}/include
         ${SDL_DIR}/include
-        ${CMAKE_SOURCE_DIR}/ext/
-        ${CMAKE_BINARY_DIR}/
-        ${CMAKE_SOURCE_DIR}/project/
-        ${CMAKE_SOURCE_DIR}/project/src
+        ${CMAKE_CURRENT_SOURCE_DIR}/ext/
+        ${CMAKE_CURRENT_BINARY_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/project/
+        ${CMAKE_CURRENT_SOURCE_DIR}/project/src
         )
 
     set(LIB_DIRS
