--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 3.0)
 
+include(Progression)
+
 add_executable(example1 example1.cpp)
 add_executable(example2 example2.cpp)
 add_executable(example3 example3.cpp)
@@ -10,6 +12,9 @@ set_target_properties(
     DEBUG_POSTFIX _debug
     )
 
-target_link_libraries(example1 ${EXTERNAL_LIBS} debug ${OGL_STARTER_DEBUG_LIB} optimized ${OGL_STARTER_LIB})
-target_link_libraries(example2 ${EXTERNAL_LIBS} debug ${OGL_STARTER_DEBUG_LIB} optimized ${OGL_STARTER_LIB})
-target_link_libraries(example3 ${EXTERNAL_LIBS} debug ${OGL_STARTER_DEBUG_LIB} optimized ${OGL_STARTER_LIB})
+#target_link_libraries(example1 ${EXTERNAL_LIBS} debug ${PROGRESSION_LIB_NAME_DEBUG} optimized ${PROGRESSION_LIB_NAME})
+#target_link_libraries(example2 ${EXTERNAL_LIBS} debug ${PROGRESSION_LIB_NAME_DEBUG} optimized ${PROGRESSION_LIB_NAME})
+#target_link_libraries(example3 ${EXTERNAL_LIBS} debug ${PROGRESSION_LIB_NAME_DEBUG} optimized ${PROGRESSION_LIB_NAME})
+target_link_libraries(example1 ${PROGRESSION_LIBS})
+target_link_libraries(example2 ${PROGRESSION_LIBS})
+target_link_libraries(example3 ${PROGRESSION_LIBS})
