did some benchmarking on tiling, and changed the cmake files

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,9 +3,13 @@ include(Progression)
 add_executable(example1 example1.cpp)
 add_executable(example2 example2.cpp)
 add_executable(example3 example3.cpp)
+add_executable(forward forward.cpp)
+add_executable(deferred deferred.cpp)
+add_executable(deferred_light_vols deferred_light_vols.cpp)
+add_executable(tiled tiled.cpp)
 
 set_target_properties(
-    example1 example2 example3
+    example1 example2 example3 forward deferred deferred_light_vols tiled
     PROPERTIES
     DEBUG_POSTFIX _debug
     )
@@ -16,3 +20,7 @@ set_target_properties(
 target_link_libraries(example1 ${PROGRESSION_LIBS})
 target_link_libraries(example2 ${PROGRESSION_LIBS})
 target_link_libraries(example3 ${PROGRESSION_LIBS})
+target_link_libraries(forward ${PROGRESSION_LIBS})
+target_link_libraries(deferred ${PROGRESSION_LIBS})
+target_link_libraries(deferred_light_vols ${PROGRESSION_LIBS})
+target_link_libraries(tiled ${PROGRESSION_LIBS})
