feat: created custom model file format, removed vertex duplication

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,3 +51,5 @@ add_subdirectory(progression/)
 if (PROGRESSION_BUILD_EXAMPLES)
     add_subdirectory(examples/)
 endif()
+
+add_subdirectory(tools/)
