feat: Adding basics of Audio using openAL and sndfile. Not testing at all yet

--- a/cmake/configuration.h.in
+++ b/cmake/configuration.h.in
@@ -2,3 +2,4 @@
 
 #define PG_ROOT_DIR "${PROGRESSION_DIR}/"
 #define PG_RESOURCE_DIR "${PROGRESSION_DIR}/resources/"
+#define PG_AUDIO_ENABLED ${PG_AUDIO_ENABLED}
