feat: Forward rendering can support arbitrary number of lights now, and the framework is in place for tile deferred rendering to be added in

--- a/configs/example.toml
+++ b/configs/example.toml
@@ -3,11 +3,10 @@
     height = 720
 
 [resourceManager]
-    rootDirectory = "C:/Users/Tyler/Documents/Progression/resources/"
 
 [time]
     displayFPS = true
 
-[input]
-
-[render_system]
+[renderSystem]
+    maxNumLights = 10001
+    lightIntensityCutoff = 0.03
