feat: added a converter from obj -> cudaRT models. Also got rid of the filesystem / gcc 8 dependency

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,11 +1,13 @@
 include(Progression)
 
 add_executable(objToPGModel objToPGModel.cpp)
+add_executable(objToRTModel objToRTModel.cpp)
 
 set_target_properties(
-    objToPGModel
+    objToPGModel objToRTModel
     PROPERTIES
     DEBUG_POSTFIX _debug
     )
 
 target_link_libraries(objToPGModel ${PROGRESSION_LIBS})
+target_link_libraries(objToRTModel ${PROGRESSION_LIBS})
