feat: No loading in the constructors, fixed the pgModel, added logging to everything

--- a/progression/CMakeLists.txt
+++ b/progression/CMakeLists.txt
@@ -44,6 +44,8 @@ set(
 
     components/user_camera_component.cpp
 
+    utils/logger.cpp
+
     ${CMAKE_SOURCE_DIR}/ext/tinyobjloader/tiny_obj_loader.cc
     ${CMAKE_SOURCE_DIR}/ext/memory_map/MemoryMapped.cpp    
     ${CMAKE_SOURCE_DIR}/ext/glad/glad.c
