--- a/configs/default.toml
+++ b/configs/default.toml
@@ -1,15 +1,17 @@
 [window]
+    title = "untitled"
     width = 1280
     height = 720
-
-[resourceManager]
+    vsync = false
+    glMajor = 4
+    glMinor = 3
 
 [time]
     displayFPS = true
 
 [renderSystem]
     maxNumLights = 10001
-    lightIntensityCutoff = 0.03
+    enableTiledDeferredPipeline = false
 
 [logger]
     file = ""
